@@ -1,6 +1,5 @@
 plugins {
     id("java")
-    application // FIXME remove
 }
 
 group = "stoufexis"
@@ -20,7 +19,6 @@ dependencies {
     implementation("io.aeron:aeron-client:1.52.2")
     implementation("io.aeron:aeron-driver:1.52.2")
     implementation("org.agrona:agrona:2.6.0")
-    implementation("org.json:json:20260814")
 
     testImplementation(platform("org.junit:junit-bom:6.0.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
@@ -34,15 +32,4 @@ tasks.test {
 
 tasks.compileJava {
     options.compilerArgs.add("--enable-preview")
-}
-
-
-application {
-    applicationDefaultJvmArgs = listOf(
-        "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-        "--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
-        "--enable-preview"
-    )
-
-    mainClass.set("stoufexis.jarpc.tmp.Main")
 }
